# RE510_2024

./: .gitattributes  README.md
Experiment1/: README.md
Experiment1/devel/: .catkin  .rosinstall  setup.sh
Experiment1/src/franka_controller/: CMakeLists.txt
Experiment1/src/gazebo_launch/: CMakeLists.txt
Experiment1/src/kinect/: CMakeLists.txt
Experiment1/src/teleoperation/: CMakeLists.txt  package.xml
Experiment1/src/virtual_master_device/: CMakeLists.txt
Experiment2/: README.md
Experiment2/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
Experiment2/src/ros_tutorials/: CMakeLists.txt
Experiment2/src/ros_tutorials/launch/: tutorial.launch
Experiment2/src/ros_tutorials/msg/: IsClap.msg
Experiment2/src/ros_tutorials/src/: node_1_number_generator.cpp  node_2_game_logic.cpp  node_3_game_output.cpp
Experiment3/: README.md  img1
Experiment3/class1/devel/: .catkin  local_setup.sh  setup.sh
Experiment3/class2/homework/: README.md
Experiment3/class2/my_vehicle/: model.config  model.sdf
Experiment3/class2/my_vehicle_tm/: Session2.txt  model.sdf  (+1 more)
Experiment3/devel/: .catkin  .rosinstall  _setup_util.py
Experiment4/: 2024PSMnet.ipynb  PSMnet_solution.ipynb
Experiment4/20233381_SeungahSon/: 2024PSMnet.ipynb
Experiment5/: README.md  afterSLAM.g2o  beforeSLAM.g2o  icp.py  optimizer.py  slam.py
Experiment5/data/: pose.csv
Experiment5/prereq/: Readme.txt
Experiment6/: README.md
Experiment6/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Experiment7/carla_ad_students/: CarlaUE4.exe.lnk  carla_ad.py  dataset.py  train.py
(+184 files in other folders)
